--- a/locales/ko.json
+++ b/locales/ko.json
@@ -11,6 +11,42 @@
     "title3": "데이터 소비의 새로운 기준",
     "description3": "데이터를 현금처럼 주고 받고, 모으고, 거래할 수 있는 플랫폼을 통해 새로운 데이터 소비문화를 만들고 있습니다."
   },
+  "empoapp": {
+    "title": "데이터를 공유하는 새로운 방법",
+    "description": "돈 주고 산 데이터, 부족할 땐 비싸고 남으면 팔 수도 없습니다. 남은 데이터를 중고 거래한다면? 공유로 시작하는 데이터 소비의 첫 걸음."
+  },
+  "kpi": {
+    "kpi1": {
+      "key": "누적 다운로드 수",
+      "value": "153,450",
+      "unit": "회"
+    },
+    "kpi2": {
+      "key": "누적 데이터 거래량",
+      "value": "56,535,381",
+      "unit": "MB"
+    },
+    "kpi3": {
+      "key": "서비스 국가",
+      "value": "4개국",
+      "etc": "인도, 한국, 영국, 미국"
+    },
+    "kpi4": {
+      "key": "커버리지",
+      "value": "4.4 miliion",
+      "unit": "m²",
+      "etc": "바티칸 도시 면적의 10배"
+    }
+  },
+  "datascanner": {
+    "title": "데이터를 공유하는 새로운 방법",
+    "description": "돈 주고 산 데이터, 부족할 땐 비싸고 남으면 팔 수도 없습니다. 남은 데이터를 중고 거래한다면? 공유로 시작하는 데이터 소비의 첫 걸음.",
+    "btn": "데이터스캐너 바로가기"
+  },
+  "datascannerPlan": {
+    "title": "데이터스캐너가 수집한 요금제 <strong>2,020</strong>",
+    "description": "요금제를 정확하게 추천해 주기 위해 DB를 지속적으로 업데이트하고 있습니다."
+  },
   "reviews": {
     "empoapp1": {
       "body": "아이디어도 좋고 활용도도 좋은 어플인거 같아요!!! 강추!!",
