--- a/locales/ko.json
+++ b/locales/ko.json
@@ -97,7 +97,7 @@
     },
     {
       "definition": "이메일(고객문의)",
-      "description": "support@empoapp.com"
+      "description": "support@empo.im"
     },
     {
       "definition": "대표이사",
@@ -113,7 +113,7 @@
     },
     {
       "definition": "주소",
-      "description": "인천광역시 동구 인중로 389 지동 2층"
+      "description": "03161 서울특별시 종로구 종로 51, 18층 102호 (종로2가, 종로타워)"
     }
   ]
 }
