--- a/locales/ko.json
+++ b/locales/ko.json
@@ -97,7 +97,7 @@
     },
     {
       "definition": "이메일(고객문의)",
-      "description": "support@empo.im"
+      "description": "support@empo.im / 032-777-6605"
     },
     {
       "definition": "대표이사",
@@ -109,7 +109,7 @@
     },
     {
       "definition": "통신판매업신고번호",
-      "description": "2018-인천동구-0094"
+      "description": "2021-서울종로-0249"
     },
     {
       "definition": "주소",
