--- a/locales/en.json
+++ b/locales/en.json
@@ -96,11 +96,28 @@
   "info": [
     {
       "definition": "",
-      "description": "Empo Inc"
+      "description": "Empo Inc."
     },
     {
-      "definition": "",
-      "description": "Email: support@empoapp.com"
+      "definition": "Contact",
+      "description": "support@empo.im / 032-777-6605"
+    },
+    {
+      "definition": "CEO",
+      "description": "Jaehyung Lee"
+    },
+    {
+      "definition": "Registration (ROK)",
+      "description": "810-88-01030"
+    },
+    
+    {
+      "definition": "Mail-order license (ROK)",
+      "description": "2021-서울종로-0249"
+    },
+    {
+      "definition": "Address",
+      "description": "Jongno 51, Floor 18 Office 102, Jongno-gu, Seoul, Republic of Korea 03161"
     }
   ]
 }
