--- a/locales/en.json
+++ b/locales/en.json
@@ -119,5 +119,9 @@
       "definition": "Address",
       "description": "Jongno 51, Floor 18 Office 102, Jongno-gu, Seoul, Republic of Korea 03161"
     }
-  ]
+  ],
+  "terms": {
+    "title": "Terms of Use",
+    "content": ""
+  }
 }
