--- a/locales/en.json
+++ b/locales/en.json
@@ -50,6 +50,10 @@
     "title": "datascanner has <strong>2,020</strong> data plans",
     "description": "Data plan DB is always up to date for precise curation."
   },
+  "mareel": {
+    "title": "mareel is great",
+    "description": "mareel is super great"
+  },
   "reviews": {
     "empoapp1": {
       "body": "I and my friends have installed this app. it easy to share data .Now the sign ups are quiet easy .for extra data for pubg update i used it and its fantastic",
