--- a/locales/ko.json
+++ b/locales/ko.json
@@ -47,6 +47,10 @@
     "title": "데이터스캐너가 수집한 요금제 <strong>2,020</strong>",
     "description": "요금제를 정확하게 추천해 주기 위해 DB를 지속적으로 업데이트하고 있습니다."
   },
+  "mareel": {
+    "title": "mareel is great",
+    "description": "mareel is super great"
+  },
   "reviews": {
     "empoapp1": {
       "body": "아이디어도 좋고 활용도도 좋은 어플인거 같아요!!! 강추!!",
